# Android7Zip

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/p7zip/: native-lib.cpp
app/src/main/cpp/p7zip/CPP/7zip/Archive/7z/: 7zHandlerOut.cpp
app/src/main/cpp/p7zip/CPP/Windows/: ErrorMsg.cpp
app/src/main/cpp/p7zip/CPP/include_windows/: basetyps.h
app/src/main/java/com/huxiaozhu/a7zip/: MainActivity.java  UnZipDialog.java  ZipDialog.java  ZipProcess.java  ZipUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib7zip/: CMakeLists.txt  build.gradle
lib7zip/src/main/: AndroidManifest.xml
lib7zip/src/main/cpp/p7zip/: native-lib.cpp
lib7zip/src/main/cpp/p7zip/CPP/7zip/Common/: CreateCoder.h
lib7zip/src/main/cpp/p7zip/CPP/Windows/: ErrorMsg.h
lib7zip/src/main/java/com/xiaozhu/lib7zip/: ZipUtils.java
lib7zip/src/main/res/values/: strings.xml
